------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

April 23 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
	
	* Now compiles in Linux. (some problems with festring)
	* Engraved messages can be viewed in LookMode.
	* Low dexterity characters can get caught in setting bear traps
	* Cloning elpuri's head abuse prohibited
	* Golems now engrave and don't chat
	* Mellis gives just new bottles, that can be filled with other materials than ommel urine and banana flesh too.

April 23 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Silva's boulders now destroy neither altars, stairs nor any other important
	  terrain
	* Eddies no longer spit couches over irreplacable terrain
	* Decreased the HP requirement of every mage by 100 since they were so rare;
	  this change's effect must be tested carefully in game
	* Corpses made of precious materials now sparkle
	* Removed the insult for pressing an unrecognized key
	* Kicking now uses a random leg so that both legs are trained
	* Hit order using two weapons or fists is now unpredictable
	* Fixed a rounding error that freezed leg strength when burdened and doubled
	  agility exp minus
	* Hitting or blocking with a two-handed weapon now gives strength exp to both
	  arms
	* Reduced exp gained in battle to counterbalance these changes
	* Being satiated (and not moving) again reduces agility exp; I don't know
	  if this makes agility too difficult to train, but let's test it
	* Nonhumanoids now gain strength exp from biting
	* Kicking now gives no exp if there is no character in the kicked square,
	  since this could be abused
	* Added many new material configs for thunder hammers