@@ -7,6 +7,11 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+April 25 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Fixing not alive bodyparts with scroll of repair is now possible.
+	* Only monsters that can read can read engraved messages
+	
 April 23 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 	
 	* Now compiles in Linux. (some problems with festring)
